--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <div class="project">
                 <a href="https://alexxmanos.github.io/NBAthemedJeopardyGame/" target="_blank">
-            <img src="/images/project1img.png" alt="Project 1 title">
+            <img src="./images/project1img.png" alt="Project 1 title">
             <h3>NBA Themed Jeopardy Game</h3>
             <p>Created a NBA Jeopardy Game displays that a jeopardy like game board with questions that are NBA related. This game was built using HTML,CSS,and JavaScript. CSS was used to make the jeopardy game board and style it. JavaScript was used to add functions, eventListeners and the arrays for the questions and answers. HTML was used to link my CSS and JavaScript File.</p>
         </div>
@@ -31,7 +31,7 @@
         
         <div class="project">
                 <a href="https://s8pyp6-3000.csb.app/" target="_blank">
-            <img src="/images/project2img.png" alt="Project 2 title">
+            <img src="./images/project2img.png" alt="Project 2 title">
             <h3>Gen 1 Pokémon Pokedex API Web App</h3>
             <p>This project is a web application built using React that allows you to explore and learn about the original 151 Pokémon from the first generation of Pokémon. It features a Pokedex for browsing Pokémon and a detailed view for each Pokémon's information. When you click on a Pokémon you're able to see detailed information, including its name, height, weight, and abilities. Data was fetched from the PokeAPI.</p>
         </div>
